stylesheets/stylesheet.css
/* ----------------------------------------------------------------------------
 * Slate Theme for GitHub Pages
 * by Jason Costello, @jsncostello, modified by @kunigami
 * ----------------------------------------------------------------------------
 */

@import url(pygment_trac.css);

/* ----------------------------------------------------------------------------
 * MeyerWeb Reset
 * ----------------------------------------------------------------------------
 */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

ol,
ul {
  list-style: none;
}

ul > li {
  padding-bottom: 3px;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* ----------------------------------------------------------------------------
 * Theme Styles
 * ----------------------------------------------------------------------------
 */
body {
  background-color: #fff;
  box-sizing: border-box;
  color: #5b5b5b;
  font-size: 18px;
  font-family: 'Crimson Pro', Verdana, Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  line-height: 1.2;
}

h1,
h2,
h3,
h3 a,
h3 a:hover,
h3 a:focus,
h4,
h5,
h6 {
  margin: 10px 0;
  color: #5b5b5b;
  font-family: 'Open Sans', Verdana;
  letter-spacing: -1px;
  text-decoration: none;
}

h1 {
  font-size: 24px;
  margin: 30px 0 20px 0;
}

h2 {
  font-size: 20px;
  margin: 25px 0 20px 0;
}

h3 {
  font-size: 16px;
  margin-bottom: 15px;
}

h4 {
  font-size: 14px;
}

h5 {
  font-size: 18px;
}

h6 {
  font-size: 16px;
}

p {
  margin: 10px 0 20px 0;
}

footer p {
  color: #f2f2f2;
}

a {
  text-decoration: none;
  color: #358497;
  text-shadow: none;

  transition: color 0.5s ease;
  transition: text-shadow 0.5s ease;
  -webkit-transition: color 0.5s ease;
  -webkit-transition: text-shadow 0.5s ease;
  -moz-transition: color 0.5s ease;
  -moz-transition: text-shadow 0.5s ease;
  -o-transition: color 0.5s ease;
  -o-transition: text-shadow 0.5s ease;
  -ms-transition: color 0.5s ease;
  -ms-transition: text-shadow 0.5s ease;
}

a:hover,
a:focus {
  text-decoration: underline;
}

footer a {
  color: #f2f2f2;
  text-decoration: underline;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

p img {
  display: inline;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  text-align: center;
  border: none;
}

pre,
code {
  color: #222;
  background-color: #fff;

  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal,
    monospace;
  font-size: 14px;

  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
}

pre {
  width: 100%;
  padding: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  overflow: auto;
}

code {
  padding: 0 3px;
  margin: 0 3px;
}

pre code {
  display: block;
  box-shadow: none;
}

figure pre {
  /* add margin when code is inside a figure so there's space from the figcaption */
  margin-bottom: 8px;
}

blockquote {
  color: #777;
  margin-bottom: 20px;
  padding: 0 0 0 20px;
  border-left: 3px solid #bbb;
}

ul,
ol,
dl {
  margin-bottom: 15px;
}

ul {
  list-style: inside;
  padding-left: 20px;
}

ol {
  list-style: decimal inside;
  padding-left: 20px;
}

dl dt {
  font-weight: bold;
}

dl dd {
  padding-left: 20px;
  font-style: italic;
}

dl p {
  padding-left: 20px;
  font-style: italic;
}

hr {
  height: 1px;
  margin-bottom: 5px;
  border: none;
  background: url("../images/bg_hr.png") repeat-x center;
}

table {
  border-style: hidden;
  margin-bottom: 20px;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

th {
  font-family: 'Crimson Pro', Verdana, Arial, Helvetica, sans-serif;
  padding: 10px;
  background: #dddfe2;
  border: 0;
}

td {
  padding: 10px;
  border-bottom: 1px solid #dddfe2;
}

form {
  background: #f2f2f2;
  padding: 20px;
}

/* ----------------------------------------------------------------------------
 * kuniga.me overrides
 * ----------------------------------------------------------------------------
 */

#page {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 20px;
  padding-bottom: 20px;
  min-height: 100vh;
}

#page nav {
  width: 100%;
}

#page img {
  position: relative;
  margin: 0 auto;
  max-width: 739px;
  padding: 5px;
  margin: 10px 0 10px 0;
  border: 1px solid #ebebeb;

  box-shadow: 0 0 5px #ebebeb;
  -webkit-box-shadow: 0 0 5px #ebebeb;
  -moz-box-shadow: 0 0 5px #ebebeb;
  -o-box-shadow: 0 0 5px #ebebeb;
  -ms-box-shadow: 0 0 5px #ebebeb;
}

.inner {
  box-sizing: border-box;
  flex-grow: 1;
  width: 640px;
}

.tags {
  margin-top: 20px;
}

.right {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.top_margin {
  margin-top: 30px;
}

.center_children {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.center_children img {
  width: max-content;
}

div.headline {
  overflow: hidden;
}

.image_float_left {
  float: left;
  margin-right: 20px;
}

.image_float_left img {
  width: 100px;
}

.image_float_right {
  float: right;
  margin-left: 20px;
}

figcaption {
  color: #7b7b7b;
  font-size: 16px;
}

.monospace {
  font-family: Menlo, monospace;
}

#page img.icon {
  border: 0px;
  margin: 0px;
  padding: 0px;
  vertical-align: bottom;
}

.books-table td {
  vertical-align: top;
}

.books-table th.thumbnail {
  width: 15%
}

.books-table img {
  height: 100px;
}

.charities-table td.text {
  vertical-align: middle;
}

.giscus {
  margin-top: 10px;
}

ol {
  counter-reset: item;
}

ol > li {
  counter-increment: item;
}

ol ol > li {
  display: block;
}

ol ol > li:before {
  content: counters(item, ".") ". ";
}

li > .language-plaintext,
p > .language-plaintext {
  box-shadow: none;
  margin: auto;
}

theorem {
  display: block;
  margin-bottom: 10px;
}

proof, nonproof {
  display: none;
}

.icons_container {
  display: flex;
  justify-content: center;
  flex-direction: row;
}

.icon_container {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin: 0 5px;
}

/* ----------------------------------------------------------------------------
 * Small Device Styles
 * ----------------------------------------------------------------------------
 */

@media only screen and (max-width: 1000px) {
  body {
    font-size: 40px;
  }

  h1 {
    font-size: 50px;
  }

  h2 {
    font-size: 45px;
  }

  h3 {
    font-size: 40px;
  }

  pre, code {
    font-size: 28px;
  }

  #page figcaption {
    color: #888888;
    font-size: 18px;
    width: 100%;
  }

  #page .center_children img {
    max-width: none;
    width: 100%;
  }

  .inner {
    width: 100%;
    padding: 0 20px;
  }

  p {
    margin: 25px 0 50px 0;
  }

  .image_float_left img {
    width: 250px;
  }
}

